overflow fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,8 +50,12 @@ body {
   font: 400 15px Lato, sans-serif;
   line-height: 1.8;
   color: #818181;
-  overflow-x: hidden;
 }
+
+body, html {
+    overflow-x: hidden;
+}
+
 h2 {
   font-size: 24px;
   text-transform: uppercase;
